Added webpage with live data plotting, and a fetch function to fetch nfl current events
